[tool.poetry]
name = "poetry_project"
version = "0.1.0"
description = ""
authors = ["xinxi <xinxi1990@163.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
httpx = "^0.11.0"
logzero = "^1.5.0"
redis = "^3.3.11"
aiohttp = "^3.8.5"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
httpx = "^0.11.0"
logzero = "^1.5.0"
aiohttp = "^3.8.5"
numpy = "^1.18.1"


[tool.poetry.scripts]
poetry_run = "poetry_project.cli:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
